@@ -1,3 +1,11 @@
+drkns 06.10.2016 22:59:17 +0200 - build 4809
+
+1. Не сохранялись флаги консоли ENABLE_AUTO_POSITION и ENABLE_INSERT_MODE:
+   - окно могло неоптимально позиционироваться при разворачивании;
+   - запущенный из фара, например, cmd мог внезапно оказаться в режиме 'overwrite'.
+
+2. Пара мелочей.
+
 zg 06.10.2016 19:59:25 +0200 - build 4808
 
 1. уточнение 4808 для вложенных диалогов.
